--- a/angular/src/app/issue/issue-edit/issue-edit.component.html
+++ b/angular/src/app/issue/issue-edit/issue-edit.component.html
@@ -12,7 +12,6 @@
            aria-valuemin="0"
            aria-valuemax="100"></div>
     </div>
-    <br>
   </div>
 </div>
 
@@ -28,7 +27,7 @@
               <span class="input-group-text" >issue key</span>
             </div>
             <input type="text"
-                   (blur)="progressKEY = 20"
+                   (blur)="setProgress('key', 0)"
                    formControlName="key"
                    class="form-control"
                    placeholder="XYZ-99"
@@ -36,12 +35,14 @@
                    id="issue_key">
           </div>
           <div class="positive"
-               *ngIf="issueForm.get('key').valid && issueForm.get('key').touched">
-            <p></p>
-            Looks good.
+               *ngIf=" issueForm.get('key').valid && issueForm.get('key').touched">
+            looks good
           </div>
-          <div class="warning" *ngIf="issueForm.get('key').invalid && issueForm.get('key').touched ">
-            Please insert key.
+          <div class="warning" *ngIf="issueForm.controls['key'].hasError('required')&& issueForm.get('key').touched ">
+            please insert the key
+          </div>
+          <div class="warning" *ngIf="issueForm.controls['key'].hasError('pattern')&& issueForm.get('key').touched ">
+            key needs to be of format ABC-12
           </div>
         </div>
       </div>
@@ -54,18 +55,24 @@
               <span class="input-group-text" >priority</span>
             </div>
             <input type="number"
+                   value="1"
                    max="9"
                    min="1"
-                   (blur)="progressPRIORITY = 20"
+                   (blur)="setProgress('priority', 1)"
                    formControlName="priority"
-                   class="form-control"
-                   placeholder="1">
+                   class="form-control">
           </div>
           <div class="positive" *ngIf="issueForm.get('priority').valid && issueForm.get('priority').touched">
-            Looks good.
+            looks good
           </div>
-          <div class="warning" *ngIf="issueForm.get('priority').invalid && issueForm.get('priority').touched ">
-            Please insert priority.
+          <div class="warning" *ngIf="issueForm.controls['priority'].hasError('required') && issueForm.get('priority').touched ">
+            please insert priority
+          </div>
+          <div class="warning" *ngIf="issueForm.controls['priority'].hasError('max') && issueForm.get('priority').touched ">
+            priority cannot be greater than 9
+          </div>
+          <div class="warning" *ngIf="issueForm.controls['priority'].hasError('min') && issueForm.get('priority').touched ">
+            priority must be greater than 0
           </div>
         </div>
       </div>
@@ -78,18 +85,23 @@
               <span class="input-group-text" >project name</span>
             </div>
             <input type="text"
-                   (blur)="progressTEAM = 20"
+                   (blur)="setProgress('project',2 )"
                    formControlName="project"
+                   minlength="5"
+                   maxlength="50"
                    class="form-control"
                    placeholder="mars-landing-101"
                    aria-label="project_name"
                    id="project_name">
           </div>
           <div class="positive" *ngIf="issueForm.get('project').valid && issueForm.get('project').touched">
-            Looks good.
+            looks good
           </div>
-          <div class="warning" *ngIf="issueForm.get('project').invalid && issueForm.get('project').touched ">
-            Please insert project.
+          <div class="warning" *ngIf="issueForm.controls['project'].hasError('required') && issueForm.get('project').touched ">
+            please insert project name
+          </div>
+          <div class="warning" *ngIf="issueForm.controls['project'].hasError('minlength') && issueForm.get('project').touched ">
+            project name has to be 5-50 characters long
           </div>
         </div>
       </div>
@@ -99,19 +111,24 @@
         <div class="col mb-3 form-group shadow-textarea">
           <div class="input-group mb-3">
             <textarea class="form-control input-lg"
-                      (blur)="progressDESCLONG = 20"
+                      (blur)="setProgress('description',3 )"
                       type="text"
                       maxlength="500"
+                      minlength="30"
                       rows="4"
                       formControlName="description"
                       placeholder="issue description with all possible details"
                       aria-label="summary"
                       id="description"></textarea>
-          </div><div class="positive" *ngIf="issueForm.get('description').valid && issueForm.get('description').touched">
-          Looks good.
-        </div>
-          <div class="warning" *ngIf="issueForm.get('description').invalid && issueForm.get('description').touched ">
-            Please describe the problem.
+          </div>
+          <div class="positive" *ngIf="issueForm.get('description').valid && issueForm.get('description').touched">
+            looks good
+          </div>
+          <div class="warning" *ngIf="issueForm.controls['description'].hasError('required') && issueForm.get('description').touched ">
+            please describe the problem
+          </div>
+          <div class="warning" *ngIf="issueForm.controls['description'].hasError('minlength') && issueForm.get('description').touched ">
+            description cannot be shorter than 50 characters
           </div>
         </div>
       </div>
@@ -121,7 +138,7 @@
         <div class="col mb-3">
           <div class="input-group mb-3">
             <textarea type="text"
-                      (blur)="progressDESCSHORT = 20"
+                      (blur)="setProgress('summary', 4)"
                        maxlength="100"
                        rows="1"
                        formControlName="summary"
@@ -133,20 +150,23 @@
           <div class="positive" *ngIf="issueForm.get('summary').valid && issueForm.get('summary').touched">
             Looks good.
           </div>
-          <div class="warning" *ngIf="issueForm.get('summary').invalid && issueForm.get('summary').touched ">
-            You need to add a shorter description here.
+          <div class="warning" *ngIf="issueForm.controls['summary'].hasError('required') && issueForm.get('summary').touched ">
+            you have to add a short description
+          </div>
+          <div class="warning" *ngIf="issueForm.controls['summary'].hasError('minlength') && issueForm.get('summary').touched ">
+            summary cannot be shorter than 20 characters
           </div>
         </div>
       </div>
 
       <!-- buttons: cancel/save -->
       <div class="row justify-content-center">
-        <div class="col-1 col-sm-2">
+        <div class="col col-md-2 col-sm-2">
           <button type="submit"
                   [disabled]="!issueForm.valid"
                   class="btn btn-success btn-lg">Save</button>
         </div>
-        <div class="col-1 col-sm-2">
+        <div class="col col-md-2 col-sm-2">
           <button type="button"
                   (click)="leaveEdit()"
                   class="btn btn-danger btn-lg">Cancel</button>
