--- a/angular/src/app/issue/issue-list/issue-list-element/issue-list-element.component.html
+++ b/angular/src/app/issue/issue-list/issue-list-element/issue-list-element.component.html
@@ -1,9 +1,9 @@
-<div style="cursor: pointer; padding-right: 10px"
+<div style="cursor: pointer; padding-right: 10px; padding-left: 10px"
     class="list-group-item list-group-item-action"
     (click)="issueSelected()">
 
-  <div class="row">
-    <div class="d-flex align-items-center">
+  <div class="form-inline">
+    <!-- badge with priority -->
       <div class="border-right">
         <div class="col">
           <span [ngClass]="{
@@ -16,28 +16,21 @@
             {{issue.priority}}
           </span>
         </div>
-      </div>
     </div>
 
-    <div class="d-flex  justify-content-between">
-
-      <div class="d-flex  align-items-center">
         <div class="col" style="">
         <span class="list-group-item-heading ">{{(issue.issue_key)}}</span>
         </div>
+
+      <div class="col " style="padding-left: 0; padding-right: 0">
+        <button style="margin-bottom:0; max-height: 35px"
+                class="btn btn-primary"
+                (click)="detailsSelected()">Details</button>
       </div>
-
-        <div class="col align-self-end" style="padding-left: 0; padding-right: 0">
-          <button style="margin-bottom:0; max-height: 35px"
-                  class="btn btn-primary"
-                  (click)="detailsSelected()">Details</button>
-        </div>
-
-    </div>
   </div>
 
   <hr *ngIf="isSelected">
-  <div *ngIf="isSelected" class="row">
+  <div *ngIf="isSelected" class="form-inline">
     <h6>issue summary:</h6>
     <p>{{issue.summary}}</p>
   </div>
