--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav *ngIf="nav.visible"
+     class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="">Got work?</a>
   <button class="navbar-toggler btn"
           type="button" data-toggle="collapse"
