--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -12,12 +12,18 @@
           </div>
 
           <div class="form-group">
-            <input value='' formControlName="userkey" placeholder="userkey" type="text"
+            <input formControlName="userkey"
+                   placeholder="userkey"
+                   type="text"
+                   id="userkey"
                    class="form-control"/>
           </div>
 
           <div class="form-group">
-            <input id="password" type="password" value='' placeholder="password" formControlName="password"
+            <input id="password"
+                   type="password"
+                   placeholder="password"
+                   formControlName="password"
                    class="form-control"/>
           </div>
 
