--- a/angular/src/app/login/successful-login/successful-login.component.html
+++ b/angular/src/app/login/successful-login/successful-login.component.html
@@ -1,6 +1,6 @@
 <div id = "succ" class="text-center">
   <div class="jumbotron">
-    <h1 class="display-4">Hello {{user.name}}!</h1>
+    <h1 class="display-4">Hello {{userService.userNamePromise|async}}!</h1>
     <hr class="my-4">
     <p>Have a great day today! :)</p>
   </div>
