--- a/angular/src/app/login/successful-login/successful-login.component.css
+++ b/angular/src/app/login/successful-login/successful-login.component.css
@@ -4,5 +4,22 @@
   margin: 0 auto;
   margin-top: 150px;
   width: 60%;
+  animation: 300ms alertAnimation;
 }
 
+.alert{
+  text-align: justify;
+  color: darkred;
+  animation: 400ms alertAnimation forwards;
+}
+
+@keyframes alertAnimation {
+  from{
+    opacity:0;
+    transform: translateY(0);
+  }
+  to{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
