--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -29,10 +29,13 @@
 
     </ul>
     <div *ngIf="isCollapsed" class="navbar-brand">
+      <div class="form-inline">
+      <h5 style="padding-right: 15px">Hi Steven</h5>
       <img
         height="42" width="42"
         style="border-radius: 50%"
         src="https://experience.sap.com/fiori-design-web/wp-content/uploads/sites/5/2017/02/Avatar-Sizes-Custom-1.png" alt="Avatar">
+    </div>
     </div>
   </div>
 </nav>
