adding and modifying issues connected to backend

--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -30,7 +30,7 @@
     </ul>
     <div *ngIf="isCollapsed" class="navbar-brand">
       <div class="form-inline">
-      <h5 style="padding-right: 15px">Hi {{getUsername()}}</h5>
+      <h5 style="padding-right: 15px">{{getUsername()}}</h5>
       <img
         height="42" width="42"
         style="border-radius: 50%"
