data refreshing bug fix

--- a/angular/src/app/issue/full-issue/full-issue.component.html
+++ b/angular/src/app/issue/full-issue/full-issue.component.html
@@ -73,7 +73,7 @@
     <h2>
       Full description
     </h2>
-    <p>{{details.description}}</p>
+    <p>{{details ? details.description : ''}}</p>
   </div>
 
 
