--- a/angular/src/app/login/successful-login/successful-login.component.html
+++ b/angular/src/app/login/successful-login/successful-login.component.html
@@ -2,6 +2,6 @@
   <div class="jumbotron">
     <h1 class="display-4">Hello {{userService.userNamePromise | async}}!</h1>
     <hr class="my-4">
-    <p>Have a great day today! :)</p>
+    <p>Have a great day today :)</p>
   </div>
 </div>
