notify only about new issues

--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -4,7 +4,7 @@
   <a class="navbar-brand" href="">Got work?</a>
 
   <!-- new issue notification -->
-  <div *ngIf="issue" class="form-inline" style="color: white">
+  <div *ngIf="issue" class="form-inline border-info" style="color: white">
     <!-- badge with priority -->
     <div class="border-right">
       <div class="col">
