changed placeholder text in key

--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -11,7 +11,7 @@
             <input id="key"
                    (focus)="setLoginFailed(false)"
                    formControlName="key"
-                   placeholder="user key"
+                   placeholder="userkey or email"
                    type="text"
                    class="form-control"/>
           </div>
