complete registration feature

--- a/angular/src/app/login/login.component.css
+++ b/angular/src/app/login/login.component.css
@@ -1,7 +1,15 @@
 #login {
   position: center;
   width: 300px;
-  margin-top: 150px;
+  margin-top: 100px;
+}
+
+#register {
+  float: right;
+  margin-top: 50px;
+  bottom: 8px;
+  right: 16px;
+  font-size: 18px;
 }
 
 
