--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -1,3 +1,10 @@
+<div class="row" id="register">
+  <div class="form-group">
+    no account?
+    <button (click)="goToRegisterPage()" class="btn btn-success" type="button">Register</button>
+  </div>
+</div>
+
 <div class="container" id="login">
   <div class="row">
     <div class="col-md-16">
@@ -38,4 +45,6 @@
 
     </div>
   </div>
+
+
 </div>
