more initial creations, also basic display of a mock user

--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -51,10 +51,11 @@
     <div *ngIf="isCollapsed" class="navbar-brand">
       <div class="form-inline">
       <h5 style="padding-right: 15px">{{userService.userNamePromise|async}}</h5>
-      <img
-        height="42" width="42"
-        style="border-radius: 50%"
-        [src]="userService.user ? userService.user.image : 'https://experience.sap.com/fiori-design-web/wp-content/uploads/sites/5/2017/02/Avatar-Sizes-Custom-1.png'" alt="Avatar">
+      <img (click)="userProfile()"
+           height="42" width="42"
+           class=""
+           style="border-radius: 50%"
+        [src]="userService.user ? userService.user.image : 'https://experience.sap.com/fiori-design-web/wp-content/uploads/sites/5/2017/02/Avatar-Sizes-Custom-1.png'" alt="user profile">
     </div>
     </div>
   </div>
