--- a/angular/src/app/user-profile/user-profile-edit/user-profile-edit.component.html
+++ b/angular/src/app/user-profile/user-profile-edit/user-profile-edit.component.html
@@ -1,3 +1,90 @@
-<p>
-  user-profile-edit works!
-</p>
+<div class="container">
+  <!-- header -->
+  <div class="py-5 text-center">
+    <h1>{{user ? 'Hello ' + (user.name+', here you can edit yourself') : ''}}</h1>
+    <hr>
+  </div>
+
+
+  <form [formGroup]="userForm" (ngSubmit)="onSubmit()" style="margin-bottom: 40px">
+  <div class="row">
+    <!-- side container with photo-->
+
+    <div class="col-md-4 order-md-3 mb-3">
+      <img
+        width="444" height="444"
+        style="border-radius: 8px;"
+        src="{{user ? (user.image != null ? user.image : defaultImage) : defaultImage}}"
+        alt="user profile">
+      <div>
+        <input type="file"
+               style="margin-top: 20px; padding: 10px 0"
+               name="image"
+               formControlName="photo"
+               (change) = "onNewPhotoAdded($event)"/>
+      </div>
+
+    </div>
+
+    <!-- user key, team name-->
+    <div class="col-md-8 order-md-2 mb-4">
+      <div class="row d-flex align-items-lg-start">
+        <div class="col-lg col-md-2">
+          <table style="margin-top: 100px" class="table table-borderless table-hover">
+            <tbody>
+
+            <tr>
+              <td></td>
+              <td class="align-middle"><h4>team</h4></td>
+              <td>
+                <h2>
+                    <input type="text"
+                           formControlName="team"
+                           class="form-control"
+                           aria-label="team">
+                </h2>
+              </td>
+            </tr>
+
+            <tr>
+              <td></td>
+              <td class="align-middle"><h4>email</h4></td>
+              <td>
+                <h2>
+                  <input id="email"
+                         formControlName="email"
+                         placeholder="email"
+                         type="text"
+                         class="form-control"/>
+                </h2>
+                <div class="warning" *ngIf="userForm.controls['email'].hasError('email') && userForm.get('email').touched ">
+                  that is not a valid email address
+                </div>
+              </td>
+            </tr>
+
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+    <div class="row justify-content-center">
+      <div class="col col-md-2 col-sm-2">
+        <button type="submit"
+                [disabled]="!userForm.valid"
+                class="btn btn-success btn-lg">Save</button>
+      </div>
+      <div class="col col-md-2 col-sm-2">
+        <button type="button"
+                (click)="leaveEdit()"
+                class="btn btn-danger btn-lg">Cancel</button>
+      </div>
+    </div>
+
+  </form>
+
+</div>
+
